# CppCamera

./: CMakeLists.txt  README.md  configure_android.bat
build_android/arm32/: CMakeCache.txt  Makefile  cmake_install.cmake
build_android/arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
cppcamera/: Camera_impl_android.cpp  Camera_impl_android.h  CppCamera.cpp  Frame.cpp  Frame.h  FrameRenderer.cpp  FrameRenderer_impl.cpp  FrameRenderer_impl.h  FrameStreamer.cpp  FrameStreamer_impl.cpp  FrameStreamer_impl.h  Frame_impl.cpp  Frame_impl.h
example/android/CppCameraExample/app/: build.gradle
example/android/CppCameraExample/app/src/main/: AndroidManifest.xml
example/android/CppCameraExample/app/src/main/cpp/: CMakeLists.txt  bridge.cpp  bridge.h  main.cpp
example/android/CppCameraExample/app/src/main/cpp/CppCamera/: CommonTypes.h  FrameRenderer.h
example/android/CppCameraExample/app/src/main/java/com/julivi/cppcameraexample/: GLView.java  MainActivity.java
example/android/CppCameraExample/app/src/main/res/layout/: activity_main.xml
example/android/CppCameraExample/app/src/main/res/values/: strings.xml
example/android/CppCameraExample/gradle/wrapper/: gradle-wrapper.properties
platform/Android/CppCamera/: CppCamera.sln
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/: 10.snap
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/CppCamera/: .markers  .markers.snap  1.tree
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/CppCamera/.indexes/af/: history.index
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.projects/_JavaProjectTemplate/: 1.tree
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.root/: 10.tree
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
platform/Android/CppCamera/.workspace/.metadata/.plugins/org.eclipse.jdt.core/: 1794587225.index  assumedExternalFilesCache  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
platform/Android/CppCamera/.workspace/CppCamera/: .classpath  .project
platform/Android/CppCamera/CppCamera/: CppCamera.androidproj  build.gradle
platform/Android/CppCamera/CppCamera/ARM/Debug/: CppCamera.aar.recipe  CppCamera.aar.recipe.merged  CppCamera.androidproj.FileListAbsolute.txt  FileStringReplace.incremental
platform/Android/CppCamera/CppCamera/app/: build.gradle  build.gradle.template
platform/Android/CppCamera/CppCamera/app/src/main/: AndroidManifest.xml.template
platform/Android/CppCamera/CppCamera/app/src/main/java/com/CppCamera/: CppCameraDeviceAPI1.java  CppCameraDeviceAPI2.java  Engine.java
platform/Android/CppCamera/CppCamera/app/src/main/res/values/: strings.xml
